<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
    <device id="retina4_7" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Translate-->
        <scene sceneID="cgn-Ml-2lL">
            <objects>
                <viewControllerPlaceholder storyboardName="Translate" id="trr-cR-w6K" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="Tvc-cl-AMg"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Wbj-pV-X96" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="284" y="551"/>
        </scene>
        <!--weather-->
        <scene sceneID="Ehz-QH-jox">
            <objects>
                <viewControllerPlaceholder storyboardName="weather" id="K4C-6C-LyY" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" image="cloud.sun.fill" catalog="system" id="Hsp-GC-9o0"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="eXy-hB-Qf6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="514" y="551"/>
        </scene>
        <!--Currency-->
        <scene sceneID="Oly-pE-AZb">
            <objects>
                <viewControllerPlaceholder storyboardName="Currency" id="FdU-Ma-eAL" userLabel="Currency" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="toi-sw-4bR"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="IpQ-eF-Ktd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="733" y="551"/>
        </scene>
        <!--Today-->
        <scene sceneID="7xD-jg-Y6h">
            <objects>
                <viewControllerPlaceholder storyboardName="Today" id="DMJ-KW-jX2" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="NaE-8i-Fgt"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="LpA-XO-zAd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="60" y="552"/>
        </scene>
        <!--Tab Bar Controller-->
        <scene sceneID="yl2-sM-qoP">
            <objects>
                <tabBarController id="49e-Tb-3d3" customClass="TabBarController" customModule="Baluchon" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
                        <rect key="frame" x="0.0" y="975" width="768" height="49"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                    </tabBar>
                    <connections>
                        <segue destination="DMJ-KW-jX2" kind="relationship" relationship="viewControllers" id="2h1-98-31G"/>
                        <segue destination="trr-cR-w6K" kind="relationship" relationship="viewControllers" id="XhV-NQ-4rj"/>
                        <segue destination="K4C-6C-LyY" kind="relationship" relationship="viewControllers" id="yZO-LH-qkt"/>
                        <segue destination="FdU-Ma-eAL" kind="relationship" relationship="viewControllers" id="JOX-C3-5Ay"/>
                    </connections>
                </tabBarController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="406" y="0.0"/>
        </scene>
    </scenes>
    <resources>
        <image name="cloud.sun.fill" catalog="system" width="64" height="44"/>
    </resources>
</document>
