...
            </objects>
            <point key="canvasLocation" x="843" y="838"/>
        </scene>
        <!--Weather-->
        <scene sceneID="qAV-2N-hui">
            <objects>
                <viewController id="s9b-l5-dML" userLabel="Weather" customClass="WeatherViewController" customModule="Baluchon" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="28K-fm-jvO">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <viewLayoutGuide key="safeArea" id="5FU-Ug-Wgt"/>
                    </view>
...
